res/default.css
html, body {
    height: 100%;
    overflow-y: hidden;
}

:root {
    /** Background color for body, page, panels and most elements **/
    --page-background-color: #FFFFFF;
    --button-border-color:#888;
    /** General text color on the page (buttons, tooltips, etc) */
    --text-color: black;
}

body {
    margin: 0;
    padding: 0;
    background-color: var(--page-background-color);
    color: var(--text-color);
    height: 100vh;
}

img.loader {
    -ms-interpolation-mode: bicubic;
    width: 16px;
    height: 16px;
}

#gamePageContainer {
    border: 0 none;
    font: inherit;
    margin: 0;
    padding: 0;
    vertical-align: baseline;

    overflow: auto;
    width: 1300px;
}

#topBar {
    position:absolute;
    top: 2px;
    left: 0px;
    height: 26px;
    width: 100%;
    border-bottom: 1px solid gray;

    box-shadow: 1px 0px 2px #888;
    min-width: 1180px;

    display: flex;
    justify-content: space-between;
    white-space: nowrap;
}

#game, #loadingContainer {
    position:absolute;
    bottom: 0;
    top: 26px;

    width: 100%;
    min-width: 1180px;

    margin: 0 auto;
    height: auto;

    white-space: nowrap;	/* to prevent log column from wrapping */
}

#loadingContainer .content{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    min-height: 100vh;

    margin-left: 30%;
    margin-right: 30%;
}

#game * {
    white-space: normal;
}

#game.centered {
    display: flex;
    justify-content: center;
}

.column {
    min-height: 100%;
    height: 100%;

    display: inline-block;
    margin-top: 4px;
}

#leftColumn {
    width: 25%;
    max-width: 400px;
    min-width: 300px;
    padding-left: 5px;
    padding-right: 20px;

    overflow-y: auto;
    overflow-x: hidden;
}

#midColumn {
    width: 630px;
    overflow-y: auto;
    overflow-x: hidden;
    margin-top: 30px;
}

#rightColumn {
    min-width: 250px;
    max-width: 400px;
    vertical-align: top;
    padding-left: 8px;
    top: 20px;
    position: relative;
}

.tabsContainer {
    padding-bottom: 15px;
    padding-top: 2px;
    position:absolute;
    top: 5px;
    text-align: center;
}

div#gameLog {
    overflow-y: auto !important;
}

#footerLinks {
    position: absolute;
    bottom: 10px;
    right: 5px;
}

.tab {
    text-decoration: none;
}

.bldTopContainer {
    padding-bottom: 5px;
	margin-bottom: 15px;
    height: 100%;
}

.bldTopContainer > a, .bldTopContainer > span {
    color: #666666;
    text-decoration: none;
}

.activeTab {
    color: black;
}

.bldTopContainer > a.activeTab {
    color: #444444;
}

.resourceRow {
    white-space: nowrap;
}

.resourceRow .resource-name,
.resourceRow > td:first-child {
    cursor: pointer;
}

.clear {
    clear: both;
    float: none;
}

.dialog input[type="button"] {
    background-color: #fff !important;
    cursor: pointer !important;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3), 0 2px 10px 0 rgba(0, 0, 0, 0.3) !important;
    border: none !important;
    border-radius: 1px !important;
    outline: 0 !important;
    color: black;
    padding: 5px 20px;
}

select {
    background-color: #fff;
    color: black;
    padding-left: 4px;
}

select>option {
    background-color: #fff;
    color: black;
    padding: 4px 10px;
}

.nosel {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.btn {
    border: 1px solid black;
    padding: 5px;
    cursor: default;
    width: 170px;
    text-align: center;
    margin-bottom:10px;
    color: var(--text-color);
}

.btn:hover {
    cursor: pointer;
}

.btn.disabled:hover {
    cursor: inherit;
}

.btn.disabled div.btnContent {
    cursor: default;
}

.btn.bldEnabled div.btnContent {
    padding: 4px;
    border: 1px solid green;
}

.btn.bldlackResConvert div.btnContent {
    padding: 4px;
    border: 1px solid #FF3030;
}

.btn .btnContent a {
    max-width: 50px;
    overflow-x: hidden;
    text-overflow: ellipsis;
    display: inline-block;
}

.btn .btnContent .small {
    font-size: 0.7em;
    line-height: 16px;
}

.btn .btnContent .btnTitle {
    display: inline-flex;
    gap: 4px;
}

.btn.small-text span {
    font-size: 90%;
}

.btn a:hover {
    color: orange;
    text-shadow: 1px 0px 10px coral;
}

.btn .noRes {
    color: #FF3030;
}

.btn .label-content {
    overflow-x: hidden;
    text-overflow: ellipsis;
}

.rawRes {
    color: gray;
}

.dropdown-link {
    cursor: pointer;
}

.spacer {
    border-bottom: 1px solid gray;
    margin-bottom: 12px;
}

.highlited {
    background-color: #EEE;
}

.dialog {
    position: absolute;
    border: 1px solid black;

    left: 50%;
    top: 50%;

    background-color: var(--page-background-color);
    padding: 20px;
    box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
}

.help {
    width: 600px;
    /*height: 300px;*/

    margin-top: -150px;
    margin-left: -300px;
    background-color: var(--page-background-color);
    color: var(--text-color);
}

.credits {
    width: 600px;
    height: 400px;


    overflow-y: scroll;

    margin-top: -200px;
    margin-left: -300px;
}

.credits li {
    text-decoration: underline;
    text-decoration-color: gainsboro;
    cursor: pointer;
}

.disabled {
    color: #999;
}

.tipr_content {
    border: 1px solid black;
    background-color: #F6F6F6;
    padding: 3px;
    margin: 2px;
}

.panelContainer {
    border: 1px solid black;
    min-height: 30px;
    margin-top: 8px;
}

.panelContainer .title {
    padding: 4px;
    padding-left: 10px;
}

.panelContainer .toggle {
    border: 1px solid black;
    margin: 4px;
    padding-left:  6px;
    padding-right: 6px;
    cursor: pointer;
}

.panelContainer .container {
    padding: 10px;
}

.maxRes,
select > option:disabled {
    color: #AAA;
}

select > option:disabled {
    font-style: italic !important;
}
/* ... */

